test/testdata/classes/methods/static/missing_2_args_error.lox
class Foo {
  static add(a, b) {
    print a + b;
  }
}

Foo.add(); // error: Foo.add() missing 2 arguments: a and b
